--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,7 @@
         <item name="android:windowBackground">@color/black</item>
     </style>
 
+    <style name="Theme.AppCompat.Dark"/>
+
     <color name="black">#FFFFFF</color>
 </resources>
